# urlshortener

./: .dockerignore  .eslintrc.json  .gitignore  Cargo.toml  LICENSE  db.sqlite  dockerfile  example.env  package.json
migrations/: 20240802152554_create_urls_table.sql  20240802155333_create_admin_user_table.sql  20240802184438_uniqe_id_and_url.sql
page/: 404.html  index.html  main.js
page/auth/register/: index.html
page/css/: custom.css  main.css
prisma/: database.sqlite  db.ts  dev.db  dev.db-journal  schema.prisma
prisma/migrations/20241006155857_poof/: migration.sql
prisma/migrations/20241104145015_added_session_column/: migration.sql
prisma/migrations/20241104145111_added_session_expires/: migration.sql
prisma/migrations/20241104145142_renamed_column/: migration.sql
prisma/migrations/20241104145718_added_active_field/: migration.sql
prisma/migrations/20241113150539_added_events_table/: migration.sql
prisma/migrations/20241113152017_renamed_events_to_event/: migration.sql
prisma/migrations/20241113162422_added_by_field/: migration.sql
prisma/migrations/20241118180423_postgres/: migration.sql
src/: api.rs  database.rs  main.rs  routes.rs
src/admin/: auth.rs  auth_endpoints.rs  database.rs  mod.rs
src/app/: UrlForm.tsx  layout.tsx  page.tsx
src/app/admin/: List.tsx  page.tsx
src/app/components/: Redirect.tsx  (+1 more)
src/components/: Button.tsx  Dialog.tsx  ErrorDialog.tsx  ErrorMesssage.tsx  Form.tsx  Input.tsx  Submit.tsx
src/lib/: AdminAuth.ts  Event.ts  Url.ts  admin_auth.ts  auth.ts
src/models/: mod.rs  totp_verify.rs  url.rs
(+20 files in other folders)
