[package]
name = "urlslasher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
log = "0.4.22"
nanoid = "0.4.0"
rocket = { version = "*" }
rocket_cors = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio", "chrono"] }
